Fixed IE post list image alignment

--- a/public_html/media/css/post-small.css
+++ b/public_html/media/css/post-small.css
@@ -41,6 +41,7 @@
 
 .post a {
 	display: inline-block;
+	vertical-align: top;
 }
 .post img.thumb {
 	display: inline-block;
